--- a/views/red_green.haml
+++ b/views/red_green.haml
@@ -40,7 +40,8 @@
                 %p My 2 cents”
 
                 %p Patrick Balleux
-              
+            .separator
+              = image_tag "images/scissor.png", :class => :scissor
               
         .bottom
         
