--- a/views/red_green.haml
+++ b/views/red_green.haml
@@ -50,3 +50,7 @@
         %span#askme Ask me anything
         
       .clearfloat
+      
+      = haml :"shared/pagination"
+      
+  = haml :"shared/footer"
