--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,14 +6,15 @@ body {
   font-family: Georgia;
   font-size: 12px;
   background: url(/images/bg.jpg) top center repeat-y;
-  padding-bottom: 120px; }
+  padding-bottom: 30px; }
 
 ul {
   list-style: none; }
 
 a {
   outline-style: none;
-  text-decoration: none; }
+  text-decoration: none;
+  color: #DC2509; }
 
 .clearfloat {
   clear: both; }
@@ -155,3 +156,29 @@ a {
   .separator .scissor {
     position: relative;
     top: -8px; }
+
+#footer {
+  width: 844px;
+  margin: 40px auto 0; }
+  #footer #powered {
+    float: left;
+    margin-left: 10px; }
+  #footer #copyright {
+    margin-left: 170px;
+    color: #fff;
+    text-shadow: 0 1px 1px #111;
+    line-height: 20px;
+    font-size: 14px;
+    padding-top: 10px; }
+    #footer #copyright a {
+      color: #ffad1e; }
+
+.pagination {
+  margin: 30px auto;
+  text-align: center; }
+  .pagination .next, .pagination .prev {
+    background: #222;
+    border-radius: 4px;
+    padding: 4px 8px;
+    color: #fff;
+    margin: 0 12px; }
