--- a/public/css/master.css
+++ b/public/css/master.css
@@ -159,7 +159,7 @@ a {
 
 #footer {
   width: 844px;
-  margin: 40px auto 0; }
+  margin: 80px auto 0; }
   #footer #powered {
     float: left;
     margin-left: 10px; }
@@ -177,8 +177,13 @@ a {
   margin: 30px auto;
   text-align: center; }
   .pagination .next, .pagination .prev {
-    background: #222;
+    background: #539a2c;
+    box-shadow: 0 1px 1px #affa85 inset;
+    border: 1px solid #18310b;
+    text-shadow: 0 1px 1px #111;
+    font-size: 13px;
     border-radius: 4px;
     padding: 4px 8px;
     color: #fff;
-    margin: 0 12px; }
+    margin: 0 12px;
+    text-transform: uppercase; }
