--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -84,6 +84,7 @@ a {
       padding-left:14px;
     }
     .title {
+      font-weight:normal;
       font-size:27px;
       background:url(/images/blog_title_center.png) repeat-x;
       color:#fff;
