--- a/public/css/master.css
+++ b/public/css/master.css
@@ -169,8 +169,7 @@ a {
     color: #fff;
     text-shadow: 0 1px 1px #111;
     line-height: 20px;
-    font-size: 14px;
-    padding-top: 10px; }
+    font-size: 14px; }
     #footer #copyright a {
       color: #ffad1e; }
 
