update footer css

--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -205,7 +205,8 @@ a {
     margin-left:170px;
     color:#fff;
     text-shadow:0 1px 1px #111;
-    line-height:20px;
+    height:36px;
+    line-height:36px;
     font-size:14px;
     
     a { color: #ffad1e }
