--- a/views/shared/header.haml
+++ b/views/shared/header.haml
@@ -3,6 +3,9 @@
 %header#header
   .inner
     %ul#social_networks
+      %li
+        %a{:href => "#"}
+          = image_tag "images/home_icon.png", :id => "home"
       %li 
         %a{:href => "#"}
           = image_tag "images/twitter_social.png", :id => "twitter"
