--- a/views/red_green.haml
+++ b/views/red_green.haml
@@ -41,6 +41,12 @@
                 %p My 2 cents”
 
                 %p Patrick Balleux
+                
+                .tags_section
+                  .tags_list
+                    %span.tag javascript
+                    %span.tag programming
+                
             .separator
               = image_tag "images/scissor.png", :class => :scissor
               
