--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -5,9 +5,11 @@
 
 body {
   font-family:Georgia;
+  font-family: 'Marmelad', sans-serif;
   font-size:12px;
   background:url(/images/bg.jpg) top center repeat-y;
   padding-bottom:30px;
+  color:#444;
 }
 
 ul {
@@ -65,9 +67,7 @@ a {
     color:#ffe8cc;
     margin-left:37px;
     margin-top:12px;
-    font-size:14px;
     border:0;
-    font-family:georgia;
     width:156px;
     outline:none;
     outline-style:none;
@@ -150,7 +150,7 @@ a {
       }
       p {
         margin:15px 0;
-        line-height:20px;
+        line-height:22px;
       }
     }
   }
