--- a/views/red_green.haml
+++ b/views/red_green.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= @title_for_layout
-    = stylesheet_link_tag "css/master.css"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Marmelad", "css/master.css"
   %body
     = haml :"shared/header"
     
@@ -44,8 +44,8 @@
                 
                 .tags_section
                   .tags_list
-                    %span.tag javascript
-                    %span.tag programming
+                    %a.tag{:href => "#"} javascript
+                    %a.tag{:href => "#"} programming
                 
             .separator
               = image_tag "images/scissor.png", :class => :scissor
