--- a/views/shared/title.haml
+++ b/views/shared/title.haml
@@ -2,5 +2,5 @@
   .blog_title
     .left
       .right
-        .title
-          Tri Vuong's blog (mostly rants)
+        %h1.title
+          %a{:href => "#"} Tri Vuong's blog (mostly rants)
