--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -89,12 +89,14 @@ a {
       font-weight:normal;
       font-size:27px;
       background:url(/images/blog_title_center.png) repeat-x;
-      color:#fff;
       text-align:center;
       line-height:63px;
       text-shadow:0 1px 3px #111;
       height:67px;
       padding:0 12px;
+      a {
+        color:#fff
+      }
     }
     .right {
       background:url(/images/blog_title_right.png) no-repeat bottom right;
@@ -206,12 +208,11 @@ a {
     .tag { 
       float:left;
       background:url(/images/tag_bg.png) repeat-x #94c626 left bottom; 
-      padding:3px 7px 5px; 
+      padding:3px 7px; 
       border-radius:4px;
       border:1px solid #48580a;
       color:#fff;
       display:inline-block;
-      text-shadow:0 1px 1px #222;
       box-shadow:0 1px 0 #f0ffd2 inset;
       margin-right:10px;
       margin-bottom:10px;
@@ -232,7 +233,6 @@ a {
     padding:4px 8px;
     color:#fff;
     margin:0 12px;
-    text-transform:uppercase;
   }
 }
 
