--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -130,14 +130,14 @@ a {
     .calendar  {
       float:left;
       width:54px;
-      padding-top:3px;
-      padding-bottom:12px;
+      height:64px;
+      padding-top:4px;
       text-align:center;
       background:url(/images/calendar.png) no-repeat;
       .month {
         color:#fff;
         text-transform:uppercase;
-        font-size:11px;
+        font-size:10px;
       }
       .day {
         padding:4px;
