--- a/views/red_green.haml
+++ b/views/red_green.haml
@@ -53,9 +53,9 @@
         .bottom
         
       #profile_picture_column
-        = image_tag "images/me.jpg", :id => :profile_picture
-        %span#askme_wrapper
-          %span#askme Ask me anything
+        = image_tag "images/tri_polaroid.png", :id => :profile_picture
+        %a#askme_wrapper
+          %span#askme{:href => "#"} Ask me anything
         
       .clearfloat
       
