--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,7 +6,7 @@ body {
   font-family: Georgia;
   font-family: 'Marmelad', sans-serif;
   font-size: 12px;
-  background: url(/images/bg.jpg) top center repeat-y;
+  background: url(/images/bg.jpg) top center repeat;
   padding-bottom: 30px;
   color: #444; }
 
@@ -136,7 +136,7 @@ a {
   text-align: center; }
   #profile_picture_column #profile_picture {
     margin-bottom: 15px;
-    margin-top: 7px; }
+    margin-top: 6px; }
   #profile_picture_column #askme_wrapper {
     box-shadow: 0px 9px 8px -2px #111111; }
   #profile_picture_column #askme {
@@ -154,7 +154,7 @@ a {
   width: 100%;
   border-top: 1px dashed #bbb;
   text-align: center;
-  margin: 50px 0; }
+  margin: 50px 0 40px; }
   .separator .scissor {
     position: relative;
     top: -8px; }
@@ -208,7 +208,6 @@ a {
     color: #fff;
     text-shadow: 0 1px 1px #111;
     height: 36px;
-    line-height: 36px;
-    font-size: 14px; }
+    line-height: 36px; }
     #footer #copyright a {
       color: #ffad1e; }
