--- a/public/css/master.css
+++ b/public/css/master.css
@@ -6,7 +6,7 @@ body {
   font-family: Georgia;
   font-family: 'Marmelad', sans-serif;
   font-size: 12px;
-  background: url(/images/bg.jpg) top center repeat;
+  background: url(/images/wood-wallpaper.jpg) repeat fixed;
   padding-bottom: 30px;
   color: #444; }
 
@@ -17,6 +17,9 @@ a {
   outline-style: none;
   text-decoration: none;
   color: #DC2509; }
+
+input::-webkit-input-placeholder {
+  color: #FFE8CC; }
 
 .clearfloat {
   clear: both; }
