--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -97,7 +97,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       height:67px;
       padding:0 12px;
       a {
-        color:#fff
+        color:#fff; font-weight:normal;
       }
     }
     .right {
