--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -187,6 +187,12 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   }
 }
 
+.quote {
+  margin-top:0 !important;
+  font-size:20px;
+  line-height:26px !important;
+}
+
 .separator {
   width:100%;
   border-top:1px dashed #bbb;
