--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -168,6 +168,23 @@ input::-webkit-input-placeholder { color:#FFE8CC }
   }
 }
 
+.conversation {
+  li { margin-bottom:14px }
+  .odd, .even {
+    padding:3px 10px;
+    border-radius:4px;
+    color:#fff;
+  }
+  .odd {
+    background:url(/images/chat_green.png) repeat-x top left #94c626;
+    border:1px solid #48580a;
+  }
+  .even {
+    background:url(/images/chat_blue.png) repeat-x top left #339dfb;
+    border:1px solid #0d3a64;
+  } 
+}
+
 #profile_picture_column {
   float:right;
   width:175px;
