--- a/public/css/master.css
+++ b/public/css/master.css
@@ -147,18 +147,18 @@ input::-webkit-input-placeholder {
     box-shadow: 0 3px 4px -2px #666666;
     border-radius: 4px;
     clear: both; }
-  .conversation .odd .inner, .conversation .even .inner {
+  .conversation .inner {
     padding: 3px 10px;
     border-radius: 4px;
     color: #fff; }
   .conversation .odd {
     float: left;
-    box-shadow: 0 1px 1px #f0ffd2;
+    box-shadow: 0 1px 1px #f0ffd2 inset;
     background: url(/images/chat_green.png) repeat-x bottom left #94c626;
     border: 1px solid #48580a; }
   .conversation .even {
     float: right;
-    box-shadow: 0 1px 1px #eaf4ff;
+    box-shadow: 0 1px 1px #eaf4ff inset;
     background: url(/images/chat_blue.png) repeat-x bottom left #339dfb;
     border: 1px solid #0d3a64; }
 
