--- a/public/css/master.css
+++ b/public/css/master.css
@@ -144,21 +144,23 @@ input::-webkit-input-placeholder {
   overflow: hidden; }
   .conversation li {
     margin-bottom: 14px;
-    box-shadow: 0 3px 4px -2px #666666;
+    box-shadow: 0 2px 3px -2px #222222;
     border-radius: 4px;
+    float: left;
     clear: both; }
   .conversation .inner {
-    padding: 3px 10px;
+    padding: 5px 11px;
     border-radius: 4px;
-    color: #fff; }
+    color: #fff;
+    text-shadow: 0 1px 1px #444; }
   .conversation .odd {
     float: left;
-    box-shadow: 0 1px 1px #f0ffd2 inset;
+    box-shadow: 0 1px 0 #f0ffd2 inset;
     background: url(/images/chat_green.png) repeat-x bottom left #94c626;
     border: 1px solid #48580a; }
   .conversation .even {
     float: right;
-    box-shadow: 0 1px 1px #eaf4ff inset;
+    box-shadow: 0 1px 0 #eaf4ff inset;
     background: url(/images/chat_blue.png) repeat-x bottom left #339dfb;
     border: 1px solid #0d3a64; }
 
