--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -154,6 +154,14 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       margin:10px auto 0;
       display:block;
     }
+    .note_count {
+      display:block;
+      background:#55a1d5;
+      color:#fff;
+      text-align:center;
+      border:20px;
+      margin-top:10px;
+    }
     .content {
       margin-left:93px;
       .title {
