--- a/public/css/master.css
+++ b/public/css/master.css
@@ -136,8 +136,12 @@ input::-webkit-input-placeholder {
       background: #55a1d5;
       color: #fff;
       text-align: center;
-      border: 20px;
-      margin-top: 10px; }
+      border-radius: 20px;
+      margin-top: 10px;
+      text-shadow: 0 1px 1px #444;
+      box-shadow: 0 1px 0 #eaf4ff inset;
+      background: url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
+      border: 1px solid #0d3a64; }
     #entries_column .entry .content {
       margin-left: 93px; }
       #entries_column .entry .content .title {
