update css for note count

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -141,7 +141,9 @@ input::-webkit-input-placeholder {
       text-shadow: 0 1px 1px #444;
       box-shadow: 0 1px 0 #eaf4ff inset;
       background: url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
-      border: 1px solid #0d3a64; }
+      border: 1px solid #0d3a64;
+      font-size: 10px;
+      padding: 1px 0; }
     #entries_column .entry .content {
       margin-left: 93px; }
       #entries_column .entry .content .title {
