--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -165,6 +165,8 @@ input::-webkit-input-placeholder { color:#FFE8CC }
       box-shadow:0 1px 0 #eaf4ff inset;
       background:url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
       border:1px solid #0d3a64;
+      font-size:10px;
+      padding:1px 0;
     }
     .content {
       margin-left:93px;
