--- a/public/css/master.css
+++ b/public/css/master.css
@@ -10,7 +10,7 @@ body {
   padding-bottom: 30px;
   color: #444; }
 
-ul {
+ul, ol {
   list-style: none; }
 
 a {
@@ -176,6 +176,10 @@ input::-webkit-input-placeholder {
     box-shadow: 0 1px 0 #eaf4ff inset;
     background: url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
     border: 1px solid #0d3a64; }
+
+ol.notes li {
+  list-style: none;
+  margin-bottom: 5px; }
 
 #profile_picture_column {
   float: right;
