--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -212,6 +212,7 @@ input::-webkit-input-placeholder { color:#FFE8CC }
     border:1px solid #ccc;
   }
   img { width:100%; }
+}
 
 ol.notes {
   li {
