--- a/public/css/master.css
+++ b/public/css/master.css
@@ -148,8 +148,7 @@ input::-webkit-input-placeholder {
     box-shadow: 0 1px 0 #eaf4ff inset;
     background: url(/images/chat_blue.png) repeat-x bottom left #3da6ff;
     border: 1px solid #0d3a64;
-    font-size: 10px;
-    padding: 1px 0; }
+    padding: 2px 0; }
   #entries_column .entry .content {
     margin-left: 93px; }
     #entries_column .entry .content .title {
@@ -163,7 +162,8 @@ input::-webkit-input-placeholder {
       border-radius: 3px;
       background: #eee;
       border: 1px solid #ccc;
-      box-shadow: 0 3px 5px -3px #555555; }
+      box-shadow: 0 3px 5px -3px #555555;
+      max-width: 100%; }
 
 .conversation {
   overflow: hidden; }
